# agents-sdk-web-ui

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_RU.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: main.py
backend/agent_platform/: __init__.py  agent.py
backend/api/: api.py
backend/api/endpoints/: __init__.py  agents.py  tools.py
backend/api/websockets/: connections.py
backend/core/: dependencies.py  settings.py
backend/models/: agent.py  tool.py
backend/services/: agent_service.py  tool_service.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_GUIDE.md  FRONTEND.md  FRONTEND_RU.md  cloudflare-llms-full.txt
docs/migrations/: MIGRATIONS.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/styles/: globals.css
scripts/: README.md  dev.sh  git-helper.sh  setup.sh  start_all.sh  start_backend.sh  start_frontend.sh
scripts/win/: setup.bat  start_all.bat  start_backend.bat  start_frontend.bat
src/assets/: backend-structure-diagram.mermaid  components-architecture-diagram.mermaid  frontend-structure-diagram.mermaid
